--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <div class="container">
   <h1>Dark Ascension: Beta Sign-Up</h1>
   <p>Join the dark fantasy world of shadows and secrets. Only the chosen few will ascend.</p>
+  <form id="signup-form">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+  </form>
 </div>
 </body>
 </html>
