--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" placeholder="Enter your email" required>
+    
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" placeholder="Choose a password" required>
+
+    <div class="checkbox">
+      <input type="checkbox" id="subscribe" name="subscribe">
+      <label for="subscribe">Receive dark whispers and exclusive updates?</label>
+    </div>
   </form>
 </div>
 </body>
