--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dark Fantasy Beta Test</title>
   <link rel="stylesheet" href="css/reset.css">
@@ -13,7 +13,7 @@
   <h1>Dark Ascension: Beta Sign-Up</h1>
   <p>Join the dark fantasy world of shadows and secrets. Only the chosen few will ascend.</p>
 
-  <form id="signup-form">
+  <form id="signup-form" method="get" action="#null" autocomplete="on">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
